--- a/repofile.html
+++ b/repofile.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
 
+<html>
+<head>
+<title>git testing</title>
+<h1> TESTING </h1>
+</head>
+
+<body>
+
+<p>
+This is the body of this page
+</p>
+
+</body>
+
+</html>
