AltSchool html-practice UPDATE

--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AltSchool practice webpage</title>
 </head>
 
 <body>
-    <h1>Hello! This is a test to ignore files in git</h1>
+
+    <h1>Testing the heading-elements</h1>
+    <h2>Testing the heading-elements</h2>
+    <h3>Testing the heading-elements</h3>
+    <h4>Testing the heading-elements</h4>
+    <h5>Testing the heading-elements</h5>
+    <h6>Testing the heading-elements</h6>
+
+<form>
+    <label for="name"> First name </label>
+    <input type="text" name="name" id="name" required/> <br><br>
+    <label for="lname"> Last name: </label>
+    <input type="text" id="lname" name="lname" required/>
+    <input type="submit" value="subscribe"/>
+</form>
+ <img src="C:\Users\ENVIRONMENTAL ASS\Mygitfolder\First-repo-ever\research.jpg" alt="Practice coding" width = 300px >
 </body>
 
 </html>
