--- a/index.html
+++ b/index.html
@@ -17,14 +17,54 @@
     <h5>Testing the heading-elements</h5>
     <h6>Testing the heading-elements</h6>
 
-<form>
+<!-- FORMS AND INPUTS-->
+<form action="" method="post">
     <label for="name"> First name </label>
     <input type="text" name="name" id="name" required/> <br><br>
     <label for="lname"> Last name: </label>
     <input type="text" id="lname" name="lname" required/>
-    <input type="submit" value="subscribe"/>
+    <input type="submit" value="subscribe"/> 
+<form/>
+<br/><br/>
+<form action="" method="post">
+    <input type = "text" placeholder = "Full-name" required/>
+    <select> 
+        <option value="male">Male</option>
+        <option value="female">Female</option>
+        <option value="Bi">other</option>
+    </select>
+    <input type = "email" placeholder = "Email" required/>
+    <input type="date" placeholder = "Date" required/>
+    <input type="number" placeholder = "Age" required/>
+    <input type="password" placeholder = "Password" required/> <br/>
+    <label for = "rad">disabled?</label>
+    <input type="radio" id = "rad" /> <br/>
+   
+    
+
+    <label for="agree">Agree to terms?</label>
+    <input type="checkbox" id="agree" required/> <br/>
+    <button> submit </button>
 </form>
+
  <img src="C:\Users\ENVIRONMENTAL ASS\Mygitfolder\First-repo-ever\research.jpg" alt="Practice coding" width = 300px >
+
+ <!--ORDERED AND UNORDERED LISTS-->
+ <h3>Practice ordered List</h3>
+ <ol>
+     <li>first</li>
+     <li>second</li>
+     <li>third</li>
+ </ol>
+ <h3>Practice Unordered List</h3>
+ <ul>
+     <li>first</li>
+     <li>second</li>
+     <li>third</li>
+ </ul>
+
+
+
 </body>
 
 </html>
