minor changes to table

--- a/AltScholl-Table PROJECT.html
+++ b/AltScholl-Table PROJECT.html
@@ -11,81 +11,46 @@
         <thead>
             <tr>
                 <th>S/N</th>
-                <th>Name</th>
+                <th>First name ONLY</th>
                 <th>Age</th>
                 <th>Gender</th>
                 <th>Email</th>
+                <th>Phone number</th>
             </tr>
         </thead>
 
         <tbody>
             <tr>
-                <td>
-                    1
-                </td>
-                <td>
-                    Ibro
-                </td>
-                <td>
-                    32
-                </td>
-                <td>
-                    Male
-                </td>
-                <td>
-                    majam@gmail.com
-                </td>
+                <td> 1 </td>
+                <td> Ibro </td>
+                <td> 32 </td>
+                <td> Male </td>
+                <td> majam@gmail.com </td>
+                <td>07099589487</td>
             </tr>
             <tr>
-                <td>
-                    2
-                </td>
-                <td>
-                    debro
-                </td>
-                <td>
-                    30
-                </td>
-                <td>
-                    Female
-                </td>
-                <td>
-                    myysam@gmail.com
-                </td>
+                <td> 2 </td>
+                <td> debro </td>
+                <td> 30 </td>
+                <td> Female </td>
+                <td> myysam@gmail.com </td>
+                <td>070538926745</td>
             </tr>
             <tr>
-                <td>
-                    3
-                </td>
-                <td>
-                    Ibhdsro
-                </td>
-                <td>
-                    42
-                </td>
-                <td>
-                    Male
-                </td>
-                <td>
-                    medgshdgm@gmail.com
-                </td>
+                <td> 3 </td>
+                <td> Ibinabo </td>
+                <td> 42 </td>
+                <td> Male </td>
+                <td> medgshdgm@gmail.com </td>
+                <td> 09074639120 </td>
             </tr>
             <tr>
-                <td>
-                    4
-                </td>
-                <td>
-                    Ibredasro
-                </td>
-                <td>
-                    310
-                </td>
-                <td>
-                    Male
-                </td>
-                <td>
-                    majasaem@gmail.com
-                </td>
+                <td> 4 </td>
+                <td> Benedicta </td>
+                <td> 45 </td>
+                <td> Male </td>
+                <td> menedicta-am@gmail.com </td>
+                <td> 07035461729 </td>
             </tr>
 
         </tbody>
