CSS projects update

--- a/My-Alt-Home-page-PROJECT.html
+++ b/My-Alt-Home-page-PROJECT.html
@@ -12,7 +12,7 @@
     <table>
         <thead>
             <tr>
-                <th><img src="C:\Users\ENVIRONMENTAL ASS\Mygitfolder\First-repo-ever\AltSchool Logo.JPG" alt="AltSchool Logo" width="100px" /></th>
+                <th><img src="C:\Users\ENVIRONMENTAL ASS\Mygitfolder\First-repo-ever\z-AltSchool-Logo.JPG" alt="AltSchool Logo" width="100px" /></th>
                 <th>
                     <a href="https://altschoolafrica.com" style="color:black;">Home</a>
                 </th>
@@ -31,7 +31,7 @@
     <h1>Start your application</h1> <br>
     <p>Thank you for your interest in applying for AltSchool. To continue your application <br>
     process, please note that you will be charged <b>$20</b> <br><br>
-    </p> <h3>Please fill in your email address<h3><br>
+    </p><h3>Please fill in your email address<h3><br>
 
     <form action="" method="get">
         <input style="width: 800px; height: 75px;" type="text" placeholder="Email address" required/> <br><br>
